[package]
name = "cycles"
version = "0.1.0"
authors = ["Orpheus Lummis <o@orpheuslummis.info>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.6", features = ["desktop", "router"] }
dioxus-logger = "0.5.1"
rand = "0.8.5"
tokio = { version = "1.39.0", features = ["full"] }
num = "0.4.1"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
